Finish first version

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: 'Luis Gasco, PhD.'
-baseURL: 'https://example.com/' # Website URL
+baseURL: 'https://luisgasco.es/' # Website URL
 
 ############################
 ## LANGUAGE
