--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ marketing:
     description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
     twitter: 'wowchemy'
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-PEX22Z6WEM'
     baidu_tongji: ''
     google_tag_manager: ''
     microsoft_clarity: ''  
@@ -45,7 +45,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Luis Gasco. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
