--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,7 +19,7 @@ marketing:
     local_business_type: ''
     org_name: ''
     description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    twitter: 'luisgasco'
   analytics:
     google_analytics: 'G-PEX22Z6WEM'
     baidu_tongji: ''
