--- a/.github/workflows/updater-wip.yml
+++ b/.github/workflows/updater-wip.yml
@@ -2,7 +2,11 @@ name: Updater (WIP)
 
 on:
   schedule:
-    - cron: 0 0 * * 0
+    - cron: '0 0 * * 0'  # Scheduled to run weekly at midnight on Sunday
+  workflow_dispatch:     # Allows manual trigger from GitHub
+
+permissions:
+  contents: write
 
 jobs:
   update:
